[gd_scene load_steps=6 format=3 uid="uid://bit05va33obdj"]

[ext_resource type="Script" path="res://Scenes/menu_GUI/main_Menu/main_menuSCRIPT.gd" id="1_s0xme"]
[ext_resource type="Script" path="res://Scenes/menu_GUI/main_Menu/menu_Select_ModeSCRIPT.gd" id="2_bqasa"]
[ext_resource type="Script" path="res://Scenes/menu_GUI/main_Menu/Camera2DSCRIPT.gd" id="2_visjf"]
[ext_resource type="Texture2D" uid="uid://b28tobh1efu1g" path="res://Assets/icons/exit_focus [#852].png" id="3_hi43d"]
[ext_resource type="PackedScene" uid="uid://bvp4ekoy3r5kw" path="res://Scenes/menu_GUI/template_scenes_gui/save_one.tscn" id="4_6ipnw"]

[node name="mainMenu" type="Node2D" groups=["main_menu_group"]]
script = ExtResource("1_s0xme")

[node name="mainMenuControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 1280.0
offset_bottom = 720.0

[node name="Camera2D" type="Camera2D" parent="mainMenuControl" groups=["move_camera_group"]]
position = Vector2(642, 360)
script = ExtResource("2_visjf")

[node name="menuUi_position" type="Control" parent="mainMenuControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="play" type="Button" parent="mainMenuControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -17.5
offset_right = 50.0
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
text = "Iniciar"

[node name="exit" type="Button" parent="mainMenuControl"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.5
offset_top = -38.0
offset_right = 20.5
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 0
text = "salir
"

[node name="option_button" type="TextureButton" parent="mainMenuControl"]
layout_mode = 0
offset_left = 1254.0
offset_top = 11.0
offset_right = 1274.0
offset_bottom = 31.0
texture_normal = ExtResource("3_hi43d")

[node name="menu_Select_Mode" type="Control" parent="." groups=["select_ui_menu_return"]]
layout_mode = 3
anchors_preset = 0
offset_left = 1281.0
offset_right = 2561.0
offset_bottom = 720.0
script = ExtResource("2_bqasa")

[node name="back" type="Button" parent="menu_Select_Mode"]
layout_mode = 0
offset_left = 1211.0
offset_top = 10.0
offset_right = 1280.0
offset_bottom = 41.0
text = "volver"

[node name="load" type="Button" parent="menu_Select_Mode"]
layout_mode = 0
offset_left = 544.0
offset_top = 626.0
offset_right = 636.0
offset_bottom = 657.0
text = "speed load"

[node name="SaveOne" parent="menu_Select_Mode" instance=ExtResource("4_6ipnw")]
offset_left = 84.0
offset_top = 217.0
offset_right = 384.0
offset_bottom = 517.0

[node name="SaveOne2" parent="menu_Select_Mode" instance=ExtResource("4_6ipnw")]
offset_left = 483.0
offset_top = 217.0
offset_right = 783.0
offset_bottom = 517.0

[node name="menu_select_position" parent="menu_Select_Mode/SaveOne2" index="0"]
offset_left = 7.0
offset_right = 47.0

[node name="SaveOne3" parent="menu_Select_Mode" instance=ExtResource("4_6ipnw")]
offset_left = 879.0
offset_top = 217.0
offset_right = 1179.0
offset_bottom = 517.0

[node name="menu_select_position" parent="menu_Select_Mode/SaveOne3" index="0"]
offset_left = -389.0
offset_right = -349.0

[connection signal="pressed" from="mainMenuControl/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="mainMenuControl/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="mainMenuControl/option_button" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="menu_Select_Mode/back" to="menu_Select_Mode" method="_on_back_pressed"]
[connection signal="pressed" from="menu_Select_Mode/load" to="menu_Select_Mode" method="_on_load_pressed"]

[editable path="menu_Select_Mode/SaveOne"]
[editable path="menu_Select_Mode/SaveOne2"]
[editable path="menu_Select_Mode/SaveOne3"]
